--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "runbuild": "node ./build/index.js",
     "test": "vitest",
     "lint": "prettier --check . && eslint . && pnpm check",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "svelte-kit sync"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -95,8 +96,9 @@
     "zod": "^3.24.1"
   },
   "engines": {
-    "node": ">=20",
-    "pnpm": ">=9.4",
+    "node": "^22",
+    "pnpm": "^10",
+    "deno": "forbidden, use node instead",
     "npm": "forbidden, use pnpm instead",
     "yarn": "forbidden, use pnpm instead",
     "bun": "forbidden, use pnpm instead"
