--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/js": "^9.17.0",
     "@sveltejs/kit": "^2.15.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/compression": "^1.7.5",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
@@ -30,7 +31,6 @@
     "@types/relaxed-json": "^1.0.4",
     "@types/upng-js": "^2.1.5",
     "@types/uuid": "^10.0.0",
-    "autoprefixer": "^10.4.20",
     "bits-ui": "^0.22.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -44,7 +44,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "runed": "^0.23.0",
     "svelte": "5.19.6",
     "svelte-check": "^4.1.3",
@@ -55,7 +55,7 @@
     "svelte-sonner": "^0.3.28",
     "svelte-tiny-virtual-list": "^2.1.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
