--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@eslint/js": "^9.17.0",
     "@sveltejs/kit": "^2.15.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/postcss": "^4.0.1",
+    "@tailwindcss/vite": "^4.0.1",
     "@types/compression": "^1.7.5",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
@@ -41,7 +41,6 @@
     "globals": "^15.14.0",
     "lucide-svelte": "^0.474.0",
     "numerable": "^0.3.15",
-    "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -68,7 +67,6 @@
     "@napi-rs/canvas": "^0.1.65",
     "@rollup/rollup-linux-x64-gnu": "^4.32.1",
     "@sveltejs/adapter-node": "^5.2.11",
-    "@tailwindcss/container-queries": "^0.1.1",
     "apng2gif-bin": "^1.7.1",
     "compression": "^1.7.5",
     "formsnap": "^2.0.0",
