chore: update package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "skycryptv2",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "dotenv -e .env.development -- vite dev",
     "build": "vite build",
@@ -17,11 +18,12 @@
     "prepare": "svelte-kit sync"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.19.0",
+    "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/kit": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.1",
-    "@types/compression": "^1.7.5",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash": "^4.17.15",
@@ -30,68 +32,59 @@
     "@types/node": "^22.12.0",
     "@types/relaxed-json": "^1.0.4",
     "@types/upng-js": "^2.1.5",
-    "@types/uuid": "^10.0.0",
     "bits-ui": "^0.22.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^2.46.1",
-    "farming-weight": "^0.8.1",
+    "formsnap": "^2.0.0",
+    "fs-extra": "^11.3.0",
     "globals": "^15.14.0",
+    "lodash": "^4.17.21",
     "lucide-svelte": "^0.474.0",
+    "micromatch": "^4.0.8",
+    "mongo-sanitize": "^1.1.0",
     "numerable": "^0.3.15",
+    "path": "^0.12.7",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "pretty-ms": "^9.2.0",
+    "relaxed-json": "^1.0.3",
     "runed": "^0.23.2",
+    "simple-git": "^3.27.0",
+    "skinview3d": "^3.1.0",
+    "skyhelper-networth": "^1.27.1",
     "svelte": "5.19.6",
     "svelte-check": "^4.1.4",
     "svelte-dnd-action": "^0.9.56",
     "svelte-interactions": "^0.2.0",
+    "svelte-persisted-store": "^0.12.0",
     "svelte-preprocess": "^6.0.3",
     "svelte-seo": "^1.6.1",
     "svelte-sonner": "^0.3.28",
     "svelte-tiny-virtual-list": "^2.1.2",
+    "sveltekit-superforms": "^2.23.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.1",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
-    "vaul-svelte": "1.0.0-next.3",
-    "vite": "^6.0.11"
-  },
-  "type": "module",
-  "dependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@napi-rs/canvas": "^0.1.65",
-    "@rollup/rollup-linux-x64-gnu": "^4.32.1",
-    "@sveltejs/adapter-node": "^5.2.12",
-    "apng2gif-bin": "^1.7.1",
-    "compression": "^1.7.5",
-    "formsnap": "^2.0.0",
-    "fs-extra": "^11.3.0",
-    "lodash": "^4.17.21",
-    "micromatch": "^4.0.8",
-    "minecraft-data": "^3.83.1",
-    "mongo-sanitize": "^1.1.0",
-    "mongodb": "^6.13.0",
-    "os": "^0.1.2",
-    "path": "^0.12.7",
-    "pretty-ms": "^9.2.0",
-    "prismarine-nbt": "^2.7.0",
-    "redis": "^4.7.0",
-    "relaxed-json": "^1.0.3",
-    "sharp": "^0.33.5",
-    "simple-git": "^3.27.0",
-    "skinview3d": "^3.1.0",
-    "skyhelper-networth": "^1.27.1",
-    "svelte-persisted-store": "^0.12.0",
-    "sveltekit-superforms": "^2.23.1",
     "upng-js": "^2.1.0",
     "util": "^0.12.5",
-    "uuid": "^11.0.5",
+    "vaul-svelte": "1.0.0-next.3",
+    "vite": "^6.0.11",
     "zod": "^3.24.1"
+  },
+  "dependencies": {
+    "farming-weight": "^0.8.1",
+    "sharp": "^0.33.5",
+    "prismarine-nbt": "^2.7.0",
+    "redis": "^4.7.0",
+    "mongodb": "^6.13.0",
+    "@napi-rs/canvas": "^0.1.65",
+    "minecraft-data": "^3.83.1"
   },
   "engines": {
     "node": "^22",
