--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "svelte-tiny-virtual-list": "^2.1.2",
     "sveltekit-superforms": "^2.23.1",
     "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.3",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
