--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,7 +5,6 @@ on:
     paths: ["src/**", ".github/workflows/website.yml"]
 
 env:
-  NODE_VERSION: "22"
   CONTAINER_REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
@@ -82,3 +81,41 @@ jobs:
 
       - name: Svelte Build
         run: pnpm run build
+
+  package:
+    name: Package into Container
+    if: |
+      (github.ref == 'refs/heads/prod' || github.ref == 'refs/heads/dev')
+      && github.repository_owner == 'SkyCryptWebsite'
+      && github.event_name != 'pull_request'
+    needs: [conflicts, analyze, formatting-checks, build]
+    runs-on: ubuntu-latest
+
+    permissions:
+      packages: write
+      contents: read
+
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v3
+
+      - name: Registry login
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ${{ env.CONTAINER_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and Push
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
