feat(env): add public Discord invite and Patreon links; update references in components

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ REDIS_PASSWORD="SkyCrypt"
 
 # Optional webhook for logging errors
 DISCORD_WEBHOOK=""
+
+PUBLIC_DISCORD_INVITE="https://discord.gg/"
+PUBLIC_PATREON="https://www.patreon.com/"
