feat(scripts): add prepare script for SvelteKit synchronization

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "runbuild": "node ./build/index.js",
     "test": "vitest",
     "lint": "prettier --check . && eslint . && pnpm check",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "svelte-kit sync || echo ''"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.6",
