feat(sentry): integrate Sentry for error tracking and performance monitoring

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ DISCORD_WEBHOOK=""
 
 PUBLIC_DISCORD_INVITE="https://discord.gg/"
 PUBLIC_PATREON="https://www.patreon.com/"
+
+# Sentry.io
+PUBLIC_SENTRY_DSN=""
+PUBLIC_SENTRY_HOST=""
+PUBLIC_SENTRY_PROJECT_ID=""
