--- a/package.json
+++ b/package.json
@@ -18,46 +18,46 @@
     "prepare": "svelte-kit sync || echo ''"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.6",
-    "@eslint/js": "^9.20.0",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/js": "^9.22.0",
     "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/kit": "^2.17.1",
+    "@sveltejs/kit": "^2.19.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.0.5",
+    "@tailwindcss/vite": "^4.0.11",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/lodash": "^4.17.15",
+    "@types/lodash": "^4.17.16",
     "@types/micromatch": "^4.0.9",
     "@types/mongo-sanitize": "^1.0.3",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.10",
     "@types/relaxed-json": "^1.0.4",
     "@types/upng-js": "^2.1.5",
     "bits-ui": "^0.22.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "eslint": "^9.20.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-svelte": "^2.46.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-svelte": "^3.0.3",
     "formsnap": "^2.0.0",
     "fs-extra": "^11.3.0",
-    "globals": "^15.14.0",
+    "globals": "^16.0.0",
     "lodash": "^4.17.21",
-    "lucide-svelte": "^0.475.0",
+    "lucide-svelte": "^0.479.0",
     "micromatch": "^4.0.8",
     "mongo-sanitize": "^1.1.0",
     "numerable": "^0.3.15",
     "path": "^0.12.7",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "pretty-ms": "^9.2.0",
     "relaxed-json": "^1.0.3",
-    "runed": "^0.23.2",
+    "runed": "^0.23.4",
     "simple-git": "^3.27.0",
     "skinview3d": "^3.1.0",
-    "skyhelper-networth": "^1.27.1",
-    "svelte": "5.19.9",
-    "svelte-check": "^4.1.4",
+    "skyhelper-networth": "^1.27.3",
+    "svelte": "5.22.6",
+    "svelte-check": "^4.1.5",
     "svelte-dnd-action": "^0.9.57",
     "svelte-interactions": "^0.2.0",
     "svelte-persisted-store": "^0.12.0",
@@ -66,23 +66,23 @@
     "svelte-sonner": "^0.3.28",
     "svelte-tiny-virtual-list": "^2.1.2",
     "sveltekit-superforms": "^2.23.1",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.5",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.11",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
     "upng-js": "^2.1.0",
     "util": "^0.12.5",
     "vaul-svelte": "1.0.0-next.3",
-    "vite": "^6.1.0",
-    "zod": "^3.24.1"
+    "vite": "^6.2.1",
+    "zod": "^3.24.2"
   },
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.67",
-    "@sentry/sveltekit": "^9.1.0",
-    "farming-weight": "^0.8.1",
-    "minecraft-data": "^3.83.1",
-    "mongodb": "^6.13.0",
+    "@napi-rs/canvas": "^0.1.68",
+    "@sentry/sveltekit": "^9.5.0",
+    "farming-weight": "^0.8.2",
+    "minecraft-data": "^3.84.1",
+    "mongodb": "^6.14.2",
     "prismarine-nbt": "^2.7.0",
     "redis": "^4.7.0",
     "sharp": "^0.33.5"
@@ -111,6 +111,12 @@
         "gnu",
         "msvc"
       ]
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@sentry/cli",
+      "esbuild",
+      "sharp",
+      "svelte-preprocess"
+    ]
   }
 }
