--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.68",
+    "@rollup/rollup-linux-x64-gnu": "^4.35.0",
     "@sentry/sveltekit": "^9.5.0",
     "farming-weight": "^0.8.2",
     "minecraft-data": "^3.84.1",
