chore: update VSCode extension recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,4 @@
 {
-  "recommendations": ["aaron-bond.better-comments", "bradlc.vscode-tailwindcss", "csstools.postcss", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "svelte.svelte-vscode"]
+  "recommendations": ["edwinhuish.better-comments-next", "bradlc.vscode-tailwindcss", "csstools.postcss", "dbaeumer.vscode-eslint", "esbenp.prettier-vscode", "svelte.svelte-vscode"],
+  "unwantedRecommendations": ["aaron-bond.better-comments"]
 }
