--- a/package.json
+++ b/package.json
@@ -19,30 +19,30 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.7",
-    "@eslint/js": "^9.22.0",
+    "@eslint/js": "^9.23.0",
+    "@lucide/svelte": "^0.483.0",
     "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/kit": "^2.19.0",
+    "@sveltejs/kit": "^2.20.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.0.13",
+    "@tailwindcss/vite": "^4.0.15",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash": "^4.17.16",
     "@types/micromatch": "^4.0.9",
     "@types/mongo-sanitize": "^1.0.3",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.11",
     "@types/relaxed-json": "^1.0.4",
     "@types/upng-js": "^2.1.5",
-    "bits-ui": "^1.3.11",
+    "bits-ui": "^1.3.13",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-svelte": "^3.1.0",
+    "eslint-plugin-svelte": "^3.3.3",
     "formsnap": "^2.0.0",
     "fs-extra": "^11.3.0",
     "globals": "^16.0.0",
     "lodash": "^4.17.21",
-    "lucide-svelte": "^0.479.0",
     "micromatch": "^4.0.8",
     "mongo-sanitize": "^1.1.0",
     "numerable": "^0.3.15",
@@ -52,11 +52,11 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "pretty-ms": "^9.2.0",
     "relaxed-json": "^1.0.3",
-    "runed": "^0.24.0",
+    "runed": "^0.25.0",
     "simple-git": "^3.27.0",
     "skinview3d": "^3.1.0",
     "skyhelper-networth": "^1.27.3",
-    "svelte": "5.23.0",
+    "svelte": "5.25.2",
     "svelte-check": "^4.1.5",
     "svelte-dnd-action": "^0.9.60",
     "svelte-interactions": "^0.2.0",
@@ -67,23 +67,23 @@
     "svelte-tiny-virtual-list": "^2.1.2",
     "sveltekit-superforms": "^2.24.0",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.13",
+    "tailwindcss": "^4.0.15",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
+    "typescript-eslint": "^8.27.0",
     "upng-js": "^2.1.0",
     "util": "^0.12.5",
     "vaul-svelte": "1.0.0-next.6",
-    "vite": "^6.2.1",
+    "vite": "^6.2.2",
     "zod": "^3.24.2"
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.68",
-    "@rollup/rollup-linux-x64-gnu": "^4.35.0",
-    "@sentry/sveltekit": "^9.5.0",
-    "farming-weight": "^0.8.2",
+    "@rollup/rollup-linux-x64-gnu": "^4.36.0",
+    "@sentry/sveltekit": "^9.8.0",
+    "farming-weight": "^0.8.3",
     "minecraft-data": "^3.84.1",
-    "mongodb": "^6.14.2",
+    "mongodb": "^6.15.0",
     "prismarine-nbt": "^2.7.0",
     "redis": "^4.7.0",
     "sharp": "^0.33.5"
