--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "util": "^0.12.5",
     "vaul-svelte": "1.0.0-next.6",
     "vite": "^6.2.3",
+    "vite-plugin-devtools-json": "^0.2.0",
     "zod": "^3.24.2"
   },
   "dependencies": {
