--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@sveltejs/kit": "^2.20.2",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@tanstack/svelte-query": "^5.81.2",
+    "@tanstack/svelte-query-devtools": "^5.81.2",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash": "^4.17.16",
