--- a/package.json
+++ b/package.json
@@ -18,73 +18,73 @@
     "prepare": "svelte-kit sync || echo ''"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.7",
-    "@eslint/js": "^9.23.0",
-    "@lucide/svelte": "^0.485.0",
+    "@eslint/compat": "^1.3.1",
+    "@eslint/js": "^9.30.0",
+    "@lucide/svelte": "^0.525.0",
     "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/kit": "^2.20.2",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.0.17",
+    "@sveltejs/kit": "^2.22.2",
+    "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/eslint-plugin-query": "^5.81.2",
-    "@tanstack/svelte-query": "^5.81.2",
-    "@tanstack/svelte-query-devtools": "^5.81.2",
+    "@tanstack/svelte-query": "^5.81.5",
+    "@tanstack/svelte-query-devtools": "^5.81.5",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/lodash": "^4.17.16",
+    "@types/lodash": "^4.17.19",
     "@types/micromatch": "^4.0.9",
     "@types/mongo-sanitize": "^1.0.3",
-    "@types/node": "^22.13.14",
+    "@types/node": "^24.0.7",
     "@types/relaxed-json": "^1.0.4",
     "@types/upng-js": "^2.1.5",
-    "bits-ui": "^1.3.14",
+    "bits-ui": "^2.8.10",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-svelte": "^3.4.0",
-    "formsnap": "^2.0.0",
+    "eslint": "^9.30.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-svelte": "^3.10.1",
+    "formsnap": "^2.0.1",
     "fs-extra": "^11.3.0",
-    "globals": "^16.0.0",
+    "globals": "^16.2.0",
     "lodash": "^4.17.21",
     "micromatch": "^4.0.8",
     "mongo-sanitize": "^1.1.0",
     "numerable": "^0.3.15",
     "path": "^0.12.7",
-    "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "pretty-ms": "^9.2.0",
     "relaxed-json": "^1.0.3",
-    "runed": "^0.25.0",
+    "runed": "^0.29.1",
     "simple-git": "^3.27.0",
-    "skinview3d": "^3.1.0",
+    "skinview3d": "^3.4.1",
     "skyhelper-networth": "^1.27.3",
-    "svelte": "5.25.3",
-    "svelte-check": "^4.1.5",
-    "svelte-dnd-action": "^0.9.60",
+    "svelte": "5.34.9",
+    "svelte-check": "^4.2.2",
+    "svelte-dnd-action": "^0.9.63",
     "svelte-interactions": "^0.2.0",
     "svelte-persisted-store": "^0.12.0",
     "svelte-preprocess": "^6.0.3",
     "svelte-seo": "^1.6.1",
-    "svelte-sonner": "^0.3.28",
+    "svelte-sonner": "^1.0.5",
     "svelte-tiny-virtual-list": "^2.1.2",
-    "sveltekit-superforms": "^2.24.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.17",
+    "sveltekit-superforms": "^2.27.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.28.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.0",
     "upng-js": "^2.1.0",
     "util": "^0.12.5",
     "vaul-svelte": "1.0.0-next.6",
-    "vite": "^6.2.3",
+    "vite": "^7.0.0",
     "vite-plugin-devtools-json": "^0.2.0",
-    "zod": "^3.24.2"
+    "zod": "^3.25.67"
   },
   "dependencies": {
     "@napi-rs/canvas": "^0.1.68",
     "@rollup/rollup-linux-x64-gnu": "^4.38.0",
-    "@sentry/sveltekit": "^9.10.1",
+    "@sentry/sveltekit": "^9.33.0",
     "dotenv-cli": "^8.0.0",
     "farming-weight": "^0.8.3",
     "minecraft-data": "^3.85.0",
@@ -121,6 +121,7 @@
     },
     "onlyBuiltDependencies": [
       "@sentry/cli",
+      "@tailwindcss/oxide",
       "esbuild",
       "sharp",
       "svelte-preprocess"
