--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "prismarine-nbt": "^2.7.0",
     "redis": "^4.7.0",
     "sharp": "^0.33.5",
+    "simdjson": "^0.9.2",
     "uuid": "^11.1.0"
   },
   "engines": {
@@ -124,6 +125,7 @@
       "@tailwindcss/oxide",
       "esbuild",
       "sharp",
+      "simdjson",
       "svelte-preprocess"
     ]
   }
