--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "uuid": "^11.1.0"
   },
   "engines": {
-    "node": "^22",
+    "node": "18.x",
     "pnpm": "^10",
     "deno": "forbidden, use node instead",
     "npm": "forbidden, use pnpm instead",
