--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
+    "@sveltejs/adapter-vercel": "^5.4.1",
     "@eslint/js": "^9.30.0",
     "@lucide/svelte": "^0.525.0",
     "@sveltejs/adapter-node": "^5.2.12",
